Complete basic structure of the page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <div class="container">
       <div class="dashboard dash">
-        <div class="dash-row"></div>
-        <div class="dash-head">Dashboard</div>
+        <div class="dash-row">
+          <div class="dash-head">Dashboard</div>
+        </div>
         <div class="dash-links">
           <div class="dash-row">Home</div>
           <div class="dash-row">Profile</div>
@@ -21,7 +22,7 @@
           <div class="dash-row">Communities</div>
         </div>
         <div class="dash-settings">
-          <div class="dash-row">Setting</div>
+          <div class="dash-row">Settings</div>
           <div class="dash-row">Support</div>
           <div class="dash-row">Privacy</div>
         </div>
@@ -42,20 +43,66 @@
       <div class="main">
         <div class="project">
           <p class="main-title">Your Projects</p>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
+          <div class="card">
+            <p>Super Cool Project</p>
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
+          <div class="card">
+            <p>Less Cool Project</p>
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
+          <div class="card">
+            <p>Impossible App</p>
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
+          <div class="card">
+            <p>Easy Peasy App</p>
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
+          <div class="card">
+            <p>Ad Blocker</p>
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
+          <div class="card">
+            <p>Money Maker</p>
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
         </div>
         <div class="announcements">
           <p class="main-title">Announcements</p>
-          <div class="card"></div>
+          <div class="card">
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
         </div>
         <div class="trending">
           <p class="main-title">Trending</p>
-          <div class="card"></div>
+          <div class="card">
+            <p>
+              Text text text text Text text text text Text text text text Text
+              text text text Text text text text
+            </p>
+          </div>
         </div>
       </div>
     </div>
