Style and structure dashboard

--- a/index.html
+++ b/index.html
@@ -10,21 +10,49 @@
   <body>
     <div class="container">
       <div class="dashboard dash">
-        <div class="dash-row">
-          <div class="dash-head">Dashboard</div>
+        <div class="dash-head">
+          <img src="view-dashboard.svg" alt="Dashboard button" />
+          <p>Dashboard</p>
         </div>
         <div class="dash-links">
-          <div class="dash-row">Home</div>
-          <div class="dash-row">Profile</div>
-          <div class="dash-row">Messages</div>
-          <div class="dash-row">History</div>
-          <div class="dash-row">Tasks</div>
-          <div class="dash-row">Communities</div>
+          <div class="dash-row">
+            <img src="home.svg" alt="Home button" />
+            <p>Home</p>
+          </div>
+          <div class="dash-row">
+            <img src="account.svg" alt="Profile button" />
+            <p>Profile</p>
+          </div>
+          <div class="dash-row">
+            <img src="message.svg" alt="Messages button" />
+            <p>Messages</p>
+          </div>
+          <div class="dash-row">
+            <img src="history.svg" alt="History button" />
+            <p>History</p>
+          </div>
+          <div class="dash-row">
+            <img src="text-box-check.svg" alt="Tasks button" />
+            <p>Tasks</p>
+          </div>
+          <div class="dash-row">
+            <img src="account-group.svg" alt="Groups button" />
+            <p>Groups</p>
+          </div>
         </div>
         <div class="dash-settings">
-          <div class="dash-row">Settings</div>
-          <div class="dash-row">Support</div>
-          <div class="dash-row">Privacy</div>
+          <div class="dash-row">
+            <img src="cog-outline.svg" alt="Settings button" />
+            <p>Settings</p>
+          </div>
+          <div class="dash-row">
+            <img src="help-box.svg" alt="Support button" />
+            <p>Support</p>
+          </div>
+          <div class="dash-row">
+            <img src="shield-account-outline.svg" alt="Privacy button" />
+            <p>Privacy</p>
+          </div>
         </div>
       </div>
       <div class="header">
