Complete structure of the main part of the dash

--- a/index.html
+++ b/index.html
@@ -87,64 +87,83 @@
         <div class="project">
           <p class="main-title">Your Projects</p>
           <div class="card">
-            <p>Super Cool Project</p>
+            <p class="title">Super Cool Project</p>
             <p>
               Text text text text Text text text text Text text text text Text
               text text text Text text text text
             </p>
+            <span class="symbols">
+            <img src="eye-plus-outline.svg" alt="Favorite"><img src="star-plus-outline.svg" alt="favorite"><img src="call-split.svg" alt="split">
+            </span>
           </div>
           <div class="card">
-            <p>Less Cool Project</p>
+            <p class="title">Less Cool Project</p>
             <p>
               Text text text text Text text text text Text text text text Text
               text text text Text text text text
             </p>
+            <span class="symbols">
+            <img src="eye-plus-outline.svg" alt="Favorite"><img src="star-plus-outline.svg" alt="favorite"><img src="call-split.svg" alt="split">
+            </span>
           </div>
           <div class="card">
-            <p>Impossible App</p>
+            <p class="title">Impossible App</p>
             <p>
               Text text text text Text text text text Text text text text Text
               text text text Text text text text
             </p>
+            <span class="symbols">
+            <img src="eye-plus-outline.svg" alt="Add viewer"><img src="star-plus-outline.svg" alt="favorite"><img src="call-split.svg" alt="split">
+            </span>
           </div>
           <div class="card">
-            <p>Easy Peasy App</p>
+            <p class="title">Easy Peasy App</p>
             <p>
               Text text text text Text text text text Text text text text Text
               text text text Text text text text
             </p>
+            <span class="symbols">
+            <img src="eye-plus-outline.svg" alt="Add viewer"><img src="star-plus-outline.svg" alt="favorite"><img src="call-split.svg" alt="split">
+            </span>
           </div>
           <div class="card">
-            <p>Ad Blocker</p>
+            <p class="title">Ad Blocker</p>
             <p>
               Text text text text Text text text text Text text text text Text
               text text text Text text text text
             </p>
+            <span class="symbols">
+            <img src="eye-plus-outline.svg" alt="Add viewer"><img src="star-plus-outline.svg" alt="favorite"><img src="call-split.svg" alt="split">
+            </span>
           </div>
           <div class="card">
-            <p>Money Maker</p>
+            <p class="title">Money Maker</p>
             <p>
               Text text text text Text text text text Text text text text Text
               text text text Text text text text
             </p>
+            <span class="symbols">
+            <img src="eye-plus-outline.svg" alt="Add viewer"><img src="star-plus-outline.svg" alt="favorite"><img src="call-split.svg" alt="split">
+            </span>
           </div>
         </div>
         <div class="announcements">
           <p class="main-title">Announcements</p>
-          <div class="card">
-            <p>
-              Text text text text Text text text text Text text text text Text
-              text text text Text text text text
-            </p>
+          <div class="announce-card">
+                <p>Text text text text Text text text text</p>
+                <p>Text text text text Text text text text</p>
+                <p>Text text text text Text text text text</p>
+           
           </div>
         </div>
         <div class="trending">
           <p class="main-title">Trending</p>
-          <div class="card">
-            <p>
-              Text text text text Text text text text Text text text text Text
-              text text text Text text text text
-            </p>
+          <div class="trend-card">
+
+                <p>Text text text text Text text text text</p>
+                <p>Text text text text Text text text text</p>
+                <p>Text text text text Text text text text</p>
+           
           </div>
         </div>
       </div>
