Touching up some details, changing color scheme slightly

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
           <p class="main-title">Trending</p>
           <div class="trend-card">
 
-                <p>Text text text text Text text text text</p>
-                <p>Text text text text Text text text text</p>
-                <p>Text text text text Text text text text</p>
+                <span class="row"><img src="image1.jpeg" alt="profile picture"><p>Text text text text</p></span>
+                <span class="row"><img src="image1.jpeg" alt="profile picture"><p>Text text text text</p></span>
+                <span class="row"><img src="image1.jpeg" alt="profile picture"><p>Text text text text</p></span>
            
           </div>
         </div>
